<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:text="@string/txt_usuario_String"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsuarioActivity"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_datos_usuario_String"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_edad_String"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario" />

    <TextView
        android:id="@+id/tvRangoEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_rango_edad_String"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdad" />

    <EditText
        android:id="@+id/txt_nombreUsuario"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:inputType="none"
        android:enabled="false"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/tvUsuario"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_edadUsuario"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:inputType="none"
        android:enabled="false"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/tvEdad"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombreUsuario" />

    <EditText
        android:id="@+id/txt_rangoEdad"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:inputType="none"
        android:enabled="false"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/tvRangoEdad"
        app:layout_constraintTop_toBottomOf="@+id/txt_edadUsuario" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerPelicula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:scrollbars="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rangoEdad" />


</androidx.constraintlayout.widget.ConstraintLayout>